// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when it is a textarea 1`] = `
<div>
  <label
    class="usa-label"
    for="input-id"
  >
    input label
  </label>
  <textarea
    class="usa-textarea"
    id="input-id"
    name="input-id"
    role="textbox"
  />
</div>
`;

exports[`should match snapshot when it is a textfield 1`] = `
<div>
  <label
    class="usa-label"
    for="input-id"
  >
    input label
  </label>
  <input
    class="usa-input"
    id="input-id"
    name="input-id"
    role="textbox"
    value=""
  />
</div>
`;
